# luminarytrade

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PR_SUBMISSION.md  README.md  pnpm-lock.yaml
.github/: pull_request_template_cqrs.md
backend/: .env.example  CACHE_IMPLEMENTATION.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/__tests__/: ai-provider.contract.spec.ts  base-service.contract.spec.ts  repository.contract.spec.ts
backend/src/adapters/: ADAPTER_DOCUMENTATION.md  adapter.integration.spec.ts  adapters.module.ts  index.ts
backend/src/agent/: agent-crud.controller.ts  agent-search.controller.ts  agent.controller.spec.ts  agent.module.ts  indexer.service.cache.spec.ts  indexer.service.spec.ts  indexer.service.ts
backend/src/appException/: businessException.ts  integrationException.ts  validationException.ts
backend/src/audit/: audit-log-query.controller.ts  audit-log.module.ts  audit-log.service.spec.ts  audit-log.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/authorization/: authorization.service.ts
backend/src/cache/: MIGRATION_GUIDE.md  README.md  cache-invalidator.service.spec.ts  cache-invalidator.service.ts  cache-manager.service.spec.ts  cache-manager.service.ts  cache-metrics.service.ts  cache.controller.ts  cache.module.ts  index.ts
backend/src/circular-depency/: check-circular-deps.js  circular-dep-check.yml  circular-dep-rules.js  circular-dependency.module.ts  circular-dependency.spec.ts  dependency-monitor.service.ts  eslintrc.circular-deps.js  index.ts  lazy-provider.factory.ts  lazy.decorator.ts  module-dependency-guide.md  module-graph.analyzer.ts  (+2 more)
contracts/agent-metadata/: Cargo.toml
contracts/agent-metadata/src/: lib.rs
contracts/common-utils/: AUTHORIZATION_GUIDE.md  RATE_LIMITING.md  STORAGE_OPTIMIZATION_GUIDE.md  VALIDATOR_FRAMEWORK.md
contracts/common-utils/contract/: Cargo.toml  UPGRADE_MECHANISM.md
contracts/common-utils/contract/src/: ERROR_HANDLING_GUIDE.md  PARSER_DOCUMENTATION.md  acl.rs  authorization.rs  authorization_macro.rs  authorization_tests.rs  batch.rs  batch_tests.rs  compression.rs  compression_tests.rs  config.rs  container.rs  data_migration.rs  error.rs  faucet.rs  faucet_tests.rs  lib.rs  logger.rs  marketplace.rs  marketplace_types.rs  migration.rs  oracle_bridge.rs  rate_limit.rs  rate_limit_tests.rs  state_machine.rs  state_machine_tests.rs  storage.rs  storage_monitoring.rs  storage_optimization.rs  temporary.rs  timelock.rs  timelock_tests.rs  upgrade_proxy.rs  upgrade_registry.rs  validator.rs
contracts/common-utils/contract/src/crypto/: batch.rs  ed25519.rs  error.rs  hash.rs  kdf.rs  provider.rs  result.rs
contracts/common-utils/contract/src/dex/: adapter.rs  cache.rs  fraud_indicators.rs  liquidity.rs  mod.rs  scoring_signals.rs  stellar_dex.rs  test.rs  trading_data.rs
contracts/common-utils/contract/src/events/: domain_event.rs  publisher.rs  registry.rs
contracts/common-utils/contract/src/parser/: README.md  builder.rs  config.rs  metadata_parser.rs  mod.rs  tests.rs  traits.rs
contracts/common-utils/contract/test_snapshots/test_marketplace/: test_list_and_buy_happy_path.1.json
contracts/credit-score/: Cargo.toml
contracts/fraud-detect/: Cargo.toml
contracts/multi-sig/: Cargo.toml
contracts/multi-sig/src/: lib.rs
contracts/risk-eval/: Cargo.toml
contracts/risk-eval/src/: lib.rs
docs/: authentication.md
frontend/: CODE_SPLITTING.md  README.md  package-lock.json  package.json  performance-budget.json  tsconfig.json
frontend/src/: App.tsx  CreditScore.tsx  TransactionMapper.tsx  WalletContent.tsx  index.tsx
(+417 files in other folders)
