[workspace]
resolver = "2"
members = [
  ".",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[package]
name = "agent-metadata"
version = "0.1.0"
edition = "2021"
authors = ["ChenAIKit Team"]
license = "MIT"
description = "Library for validating and parsing agent metadata (JSON CID validation, hash checks)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
common-utils = { path = "../common-utils/contract" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
